--- a/HospitalManagment/index.html
+++ b/HospitalManagment/index.html
@@ -44,7 +44,7 @@
 			</ul>
 			<div id="section">
 				<ul>
-					<li><a href="index.html">cheese cakes</a></li>
+					<li><a href="index.html">Medicine</a></li>
 					<li><a href="index.html">sponge cakes</a></li>
 					<li><a href="index.html">butter cakes</a></li>
 					<li class="selected"><a href="index.html">layer cakes</a></li>
